Toppings are graphically added to the pizza, and to the selected pizza slice (no pun intended) of the reducer

--- a/src/components/EditPizza/EditPizza.scss
+++ b/src/components/EditPizza/EditPizza.scss
@@ -39,6 +39,10 @@
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
 
     &-Visible {
+        display: inline-block;
+    }
+
+    &-Hidden {
         display: none;
     }
 
